# esp32_s2_rust_example

./: .gitignore  Cargo.toml  README.md  test.py
acceleration_sensor/: .gitignore  Cargo.toml  README.md
acceleration_sensor/src/: main.rs  mma7660fc.rs
clock/: Cargo.toml  build.rs  test.py
clock/src/: main.rs
esp32s2_common_lib/: Cargo.toml
esp32s2_common_lib/.cargo/: config.toml
esp32s2_common_lib/src/: lib.rs  sh1106_display.rs
lcd/: .gitignore  Cargo.toml
lcd/src/: display.rs  main.rs
softbody/: Cargo.toml  README.md
softbody/src/: main.rs
src/: adxl367.rs  main.rs
uart/: .gitignore  Cargo.toml  README.md
wifi/: .gitignore  Cargo.toml  README.md  build.rs
