[package]
name = "esp_rs_example"
version = "0.1.0"
authors = ["Tom0427 <82128211+Tom-game-project@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp_rs_example"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std"]

experimental = ["esp-idf-svc/experimental"]
std = ["esp-idf-svc/std"]

[dependencies]
log = "0.4"
heapless = "0.8.0"
embedded-svc = "0.24"
esp-idf-svc = { version = "0.50.1", features = ["critical-section", "embassy-time-driver", "embassy-sync", "std"] }
anyhow = "1.0.86"
smart-leds = "0.3.0"

[dependencies.esp-idf-hal]
version = "0.45.2"
features = ["rmt-legacy"]

[build-dependencies]
embuild = "0.33"
