[package]
name = "esp_rs_example"
version = "0.1.0"
authors = ["Tom0427 <82128211+Tom-game-project@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp_rs_example"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
anyhow = "1.0.86"

# --- ▼▼▼ LCD関連のクレートを互換性のあるバージョンに固定 ▼▼▼ ---
embedded-hal = "0.2.7"
display-interface-spi = "0.4.1"
mipidsi = "0.6.0" # 0.7系ではなく、display-interface-spi v0.4.1と互換性のある0.6系を使用
embedded-graphics = "0.7.1"
# --- ▲▲▲ ここまで ▲▲▲ ---
[build-dependencies]
embuild = "0.33"
