[package]
name = "esp32s2_common_lib"
version = "0.1.0"
edition = "2024"

[lib]
name = "esp32s2_common_lib"       # ライブラリとしての公開名
path = "src/lib.rs"               # エントリポイント

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-hal = "0.45.2"

anyhow = "1.0.86"

sh1106 = "0.5.0"
embedded-graphics = "0.8.1"

embedded-hal= "1.0.0"

[build-dependencies]
embuild = "0.33"
sh1106 = "0.5.0"
embedded-graphics = "0.8.1"

